--- a/data_cleanup.ipynb
+++ b/data_cleanup.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 25,
    "id": "75ab8e95",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
@@ -20,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 30,
    "id": "5a25aa69",
    "metadata": {},
    "outputs": [
@@ -219,13 +220,224 @@
        "[5 rows x 11851 columns]"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "raw_data = pd.read_csv(\"NASDAQ_FULL_2021_Close.csv\")\n",
+    "raw_data = pd.read_csv(\"data/raw/NASDAQ_FULL_2021_Close.csv\")\n",
+    "raw_data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "id": "a8ce9994",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>ABBV</th>\n",
+       "      <th>ABT</th>\n",
+       "      <th>ACN</th>\n",
+       "      <th>ADBE</th>\n",
+       "      <th>ADP</th>\n",
+       "      <th>AMD</th>\n",
+       "      <th>AMGN</th>\n",
+       "      <th>AMT</th>\n",
+       "      <th>ASML</th>\n",
+       "      <th>...</th>\n",
+       "      <th>HLAHU</th>\n",
+       "      <th>HLAHW</th>\n",
+       "      <th>HLBZW</th>\n",
+       "      <th>HLGN-WT</th>\n",
+       "      <th>HLLY-WT</th>\n",
+       "      <th>HMA-UN</th>\n",
+       "      <th>HMA-WT</th>\n",
+       "      <th>HMACR</th>\n",
+       "      <th>HMACU</th>\n",
+       "      <th>HMACW</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>125.974464</td>\n",
+       "      <td>86.739708</td>\n",
+       "      <td>99.687309</td>\n",
+       "      <td>238.710358</td>\n",
+       "      <td>485.339996</td>\n",
+       "      <td>153.288055</td>\n",
+       "      <td>92.300003</td>\n",
+       "      <td>193.642502</td>\n",
+       "      <td>191.466125</td>\n",
+       "      <td>477.949158</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>127.532021</td>\n",
+       "      <td>87.636642</td>\n",
+       "      <td>100.920723</td>\n",
+       "      <td>240.069351</td>\n",
+       "      <td>485.690002</td>\n",
+       "      <td>152.861603</td>\n",
+       "      <td>92.769997</td>\n",
+       "      <td>194.582230</td>\n",
+       "      <td>192.433868</td>\n",
+       "      <td>483.072815</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>123.239037</td>\n",
+       "      <td>86.879608</td>\n",
+       "      <td>100.710602</td>\n",
+       "      <td>242.694153</td>\n",
+       "      <td>466.309998</td>\n",
+       "      <td>152.326324</td>\n",
+       "      <td>90.330002</td>\n",
+       "      <td>199.272491</td>\n",
+       "      <td>187.359482</td>\n",
+       "      <td>468.600525</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>127.444374</td>\n",
+       "      <td>87.809464</td>\n",
+       "      <td>101.688164</td>\n",
+       "      <td>244.983932</td>\n",
+       "      <td>477.739990</td>\n",
+       "      <td>153.188248</td>\n",
+       "      <td>95.160004</td>\n",
+       "      <td>199.930344</td>\n",
+       "      <td>189.635117</td>\n",
+       "      <td>479.316132</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>128.544388</td>\n",
+       "      <td>88.270248</td>\n",
+       "      <td>101.971436</td>\n",
+       "      <td>245.877502</td>\n",
+       "      <td>485.100006</td>\n",
+       "      <td>155.184143</td>\n",
+       "      <td>94.580002</td>\n",
+       "      <td>203.749222</td>\n",
+       "      <td>193.733017</td>\n",
+       "      <td>486.303741</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 11850 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         AAPL       ABBV         ABT         ACN        ADBE         ADP  \\\n",
+       "0  125.974464  86.739708   99.687309  238.710358  485.339996  153.288055   \n",
+       "1  127.532021  87.636642  100.920723  240.069351  485.690002  152.861603   \n",
+       "2  123.239037  86.879608  100.710602  242.694153  466.309998  152.326324   \n",
+       "3  127.444374  87.809464  101.688164  244.983932  477.739990  153.188248   \n",
+       "4  128.544388  88.270248  101.971436  245.877502  485.100006  155.184143   \n",
+       "\n",
+       "         AMD        AMGN         AMT        ASML  ...  HLAHU  HLAHW  HLBZW  \\\n",
+       "0  92.300003  193.642502  191.466125  477.949158  ...    NaN    NaN    NaN   \n",
+       "1  92.769997  194.582230  192.433868  483.072815  ...    NaN    NaN    NaN   \n",
+       "2  90.330002  199.272491  187.359482  468.600525  ...    NaN    NaN    NaN   \n",
+       "3  95.160004  199.930344  189.635117  479.316132  ...    NaN    NaN    NaN   \n",
+       "4  94.580002  203.749222  193.733017  486.303741  ...    NaN    NaN    NaN   \n",
+       "\n",
+       "   HLGN-WT  HLLY-WT  HMA-UN  HMA-WT  HMACR  HMACU  HMACW  \n",
+       "0      NaN      NaN     NaN     NaN    NaN    NaN    NaN  \n",
+       "1      NaN      NaN     NaN     NaN    NaN    NaN    NaN  \n",
+       "2      NaN      NaN     NaN     NaN    NaN    NaN    NaN  \n",
+       "3      NaN      NaN     NaN     NaN    NaN    NaN    NaN  \n",
+       "4      NaN      NaN     NaN     NaN    NaN    NaN    NaN  \n",
+       "\n",
+       "[5 rows x 11850 columns]"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "raw_data.drop(columns=[\"Date\"], inplace=True)\n",
     "raw_data.head()"
    ]
   },
@@ -239,14 +451,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 32,
    "id": "d693ef6a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0      6325\n",
+       "0      6324\n",
        "1        13\n",
        "2         3\n",
        "4        72\n",
@@ -260,7 +472,7 @@
        "Name: count, Length: 220, dtype: int64"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,7 +491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 33,
    "id": "74e73d9a",
    "metadata": {},
    "outputs": [],
@@ -289,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 34,
    "id": "06fcc5bb",
    "metadata": {},
    "outputs": [],
@@ -302,7 +514,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 35,
    "id": "bb2ba6d0",
    "metadata": {},
    "outputs": [
@@ -310,9 +522,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Tickers was: 6562\n",
+      "Tickers was: 6561\n",
       "Deleted tickers (NA > 50): 5289\n",
-      "Tickers left for analysis: 6562\n"
+      "Tickers left for analysis: 6561\n"
      ]
     }
    ],
@@ -332,7 +544,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 36,
    "id": "213860a2",
    "metadata": {},
    "outputs": [
@@ -340,12 +552,12 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Yuriy\\AppData\\Local\\Temp\\ipykernel_32408\\2526927714.py:1: SettingWithCopyWarning: \n",
+      "C:\\Users\\Yuriy\\AppData\\Local\\Temp\\ipykernel_51188\\2526927714.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
       "  data.ffill(inplace=True)\n",
-      "C:\\Users\\Yuriy\\AppData\\Local\\Temp\\ipykernel_32408\\2526927714.py:2: SettingWithCopyWarning: \n",
+      "C:\\Users\\Yuriy\\AppData\\Local\\Temp\\ipykernel_51188\\2526927714.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame\n",
       "\n",
       "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
@@ -368,24 +580,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 37,
    "id": "e0e00ef6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    6562\n",
+       "0    6561\n",
        "Name: count, dtype: int64"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "data.isna().sum(axis=0).value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0564317c",
+   "metadata": {},
+   "source": [
+    "Проверим, нет ли отрицательных цен в данных"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "49e55197",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Total tickers with non-positive price found: 21\n",
+      "Examples of non-positive tickers: ['SVA', 'CBIO', 'PLTYF', 'MSVB', 'MSTO', 'AMCCF', 'ASEKF', 'DISPF', 'DQJCF', 'PBNNF'] ...\n",
+      "Removed 21 assets with non-positive prices.\n",
+      "Tickers left after price cleaning: 6540\n",
+      "Data is clean and ready for return calculation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Удаление активов с аномальными ценами (Отрицательные или Нулевые)\n",
+    "# Цены акций не могут быть отрицательными. Если после Imputation появились отрицательные \n",
+    "# или нулевые значения, это серьезная ошибка данных. Удаляем такие тикеры.\n",
+    "\n",
+    "has_non_positive_price = (data <= 0).any(axis=0)\n",
+    "non_positive_tickers = has_non_positive_price[has_non_positive_price].index.tolist()\n",
+    "\n",
+    "print(f\"Total tickers with non-positive price found: {len(non_positive_tickers)}\")\n",
+    "print(f\"Examples of non-positive tickers: {non_positive_tickers[:10]} ...\")\n",
+    "\n",
+    "initial_columns = data.shape[1]\n",
+    "# Drop columns (tickers) that have at least one non-positive price\n",
+    "data = data.drop(columns=non_positive_tickers, errors='ignore')\n",
+    "deleted_count = initial_columns - data.shape[1]\n",
+    "\n",
+    "print(f\"Removed {deleted_count} assets with non-positive prices.\")\n",
+    "print(f\"Tickers left after price cleaning: {data.shape[1]}\")\n",
+    "\n",
+    "# Финальная проверка чистоты данных\n",
+    "if (data <= 0).any().any():\n",
+    "    print(\"Error: Non-positive prices remain in data!\")\n",
+    "elif data.isna().sum().sum() > 0:\n",
+    "    print(\"Error: N/A values remain in data!\")\n",
+    "else:\n",
+    "    print(\"Data is clean and ready for return calculation.\")"
    ]
   },
   {
@@ -398,12 +665,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 39,
    "id": "ee60eebf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "data.to_csv(\"data/processed/NASDAQ_FULL_2021_Cleaned_Imputed.csv\")"
+    "data.to_csv(\"data/processed/NASDAQ_FULL_2021_Cleaned_Imputed.csv\", index=False)"
    ]
   }
  ],
